@@ -8,7 +8,7 @@
 
 
 
-	<info name="Four If By Sea" version="0.8"/>
+	<info name="Four If By Sea" version="0.9"/>
 
 	
 
@@ -1424,6 +1424,7 @@
 			 <option name="attack" value="1"/>
 
 			 <option name="defense" value="2"/>
+			 <option name="isInfantry" value="true"/>
 
 	    </attatchment>
 
