@@ -8,7 +8,7 @@
 -->
 <game>
 
-	<info name="Iron Blitz" version="1.1"/>
+	<info name="Iron Blitz" version="1.2"/>
 	
 	<loader javaClass="games.strategy.triplea.TripleA"/>
 	
@@ -809,6 +809,7 @@
 			 <option name="attack" value="1"/>
 			 <option name="defense" value="2"/>
 			 <option name="artillerySupportable" value="true"/>
+			 <option name="isInfantry" value="true"/>
 	    </attatchment>
 	    
 	    <attatchment name="unitAttatchment" 
