@@ -3,7 +3,7 @@
 <!DOCTYPE game SYSTEM "game.dtd">
 
 <game>
-        <info name="New World Order 5 Nations" version="2.1.1"/>
+        <info name="New World Order 5 Nations" version="2.1.2"/>
         
         <loader javaClass="games.strategy.triplea.TripleA"/>
 
@@ -1625,6 +1625,7 @@
 <option name="attack" value="1"/>
 <option name="defense" value="2"/>
 <option name="artillerySupportable" value="true"/>
+<option name="isInfantry" value="true"/>
 </attatchment>
 
 <attatchment name="unitAttatchment" attatchTo="elite" javaClass="games.strategy.triplea.attatchments.UnitAttachment" type="unitType">
@@ -1633,6 +1634,7 @@
 <option name="attack" value="2"/>
 <option name="defense" value="2"/>
 <option name="artillerySupportable" value="true"/>
+<option name="isInfantry" value="true"/>
 </attatchment>
 
 <attatchment name="unitAttatchment" attatchTo="artillery" javaClass="games.strategy.triplea.attatchments.UnitAttachment" type="unitType">
